--- a/css/wp-special-textboxes-corners.css
+++ b/css/wp-special-textboxes-corners.css
@@ -1,33 +1,36 @@
 @charset "utf-8";
 /* CSS Document */
 
-.alert_box,
-.download_box,
-.grey_box,
-.info_box ,
-.warning_box,
-.black_box  {
+.stb-alert_box,
+.stb-download_box,
+.stb-grey_box,
+.stb-info_box ,
+.stb-warning_box,
+.stb-black_box,
+.stb-custom_box  {
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
 }
-.black-caption_box,
-.alert-caption_box,
-.download-caption_box,
-.info-caption_box,
-.warning-caption_box,
-.grey-caption_box  {
+.stb-black-caption_box,
+.stb-alert-caption_box,
+.stb-download-caption_box,
+.stb-info-caption_box,
+.stb-warning-caption_box,
+.stb-grey-caption_box,
+.stb-custom-caption_box  {
 	-webkit-border-top-left-radius: 5px;
 	-webkit-border-top-right-radius: 5px;
 	-moz-border-radius-topleft: 5px;
 	-moz-border-radius-topright: 5px;
 }
-.black-body_box,
-.alert-body_box,
-.download-body_box,
-.info-body_box,
-.warning-body_box,
-.grey-body_box {
+.stb-black-body_box,
+.stb-alert-body_box,
+.stb-download-body_box,
+.stb-info-body_box,
+.stb-warning-body_box,
+.stb-grey-body_box,
+.stb-custom-body_box {
 	-webkit-border-bottom-left-radius: 5px;
 	-webkit-border-bottom-right-radius: 5px;
 	-moz-border-radius-bottomleft: 5px;
